apps/heimdall/bluey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
spec:
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - image: linuxserver/heimdall:2.5.5
        imagePullPolicy: IfNotPresent
        name: heimdall
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: heimdall-config
      restartPolicy: Always
      volumes:
      - name: heimdall-config
        persistentVolumeClaim:
          claimName: heimdall-config
