apps/heimdall/bluey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: heimdall
  name: heimdall
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: heimdall
  type: ClusterIP
