apps/heimdall/bluey/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: heimdall
  namespace: heimdall
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: haproxy-ingress
  tls:
    - hosts:
        - heimdall.babyvelociraptor.com
  rules:
    - host: heimdall.babyvelociraptor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: web
